samples/_failures_safe/1761418401_65073b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5dbf3d2.c: In function ‘display_high_severity_entries’:
./samples/SAFE/__tmp_a5dbf3d2.c:143:5: error: expected identifier or ‘(’ at end of input
  143 |     int
      |     ^~~
./samples/SAFE/__tmp_a5dbf3d2.c:143:5: error: expected declaration or statement at end of input
